# svc-mcp-linear

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  wrangler.toml
src/: __init__.py  auth.py  client.py  server.py
src/tools/: __init__.py  comments.py  issues.py  milestones.py  mutations.py  states.py
svc-mcp-linear/: .env.example  pyproject.toml
svc-mcp-linear/src/: server.py
svc-mcp-linear/tests/: __init__.py  test_client.py  test_tools.py
tests/: conftest.py  test_tools.py
